# tbai

./: .gitignore  CMakeLists.txt  README.md  install.sh  justfile  pixi.toml
.conda/: default.yaml
.github/workflows/: docs.yml  unit-tests.yml
cmake/: fetch_onnxruntime.cmake  fetch_torch.cmake  tbai-config.cmake.in  unitree_sdk2.cmake
tbai_controllers/: CMakeLists.txt
tbai_controllers/tbai_bob/include/tbai_bob/: BobController.hpp
tbai_controllers/tbai_bob/src/: BobController.cpp
tbai_controllers/tbai_dtc/include/tbai_dtc/: DtcController.hpp
tbai_controllers/tbai_dtc/src/: DtcController.cpp
tbai_controllers/tbai_joe/include/tbai_joe/: JoeController.hpp
tbai_controllers/tbai_joe/src/: JoeController.cpp
tbai_controllers/tbai_mpc/: CMakeLists.txt
tbai_controllers/tbai_mpc/include/tbai_mpc/arm_mpc/: ArmMpcController.hpp
tbai_controllers/tbai_mpc/include/tbai_mpc/quadruped_arm_mpc/: MpcController.hpp
tbai_controllers/tbai_mpc/include/tbai_mpc/quadruped_arm_wbc/: Factory.hpp  HqpWbc.hpp  WbcBase.hpp
tbai_controllers/tbai_mpc/include/tbai_mpc/quadruped_mpc/: MpcController.hpp
tbai_controllers/tbai_mpc/src/arm_mpc/: ArmMpcController.cpp  ArmPinocchioMapping.cpp
tbai_controllers/tbai_mpc/src/arm_wbc/: WbcBase.cpp
tbai_controllers/tbai_mpc/src/quadruped_arm_mpc/: MpcController.cpp
tbai_controllers/tbai_mpc/src/quadruped_arm_mpc/logic/: DynamicsParametersSynchronizedModule.cpp
tbai_controllers/tbai_mpc/src/quadruped_arm_mpc/quadruped_models/: QuadrupedKinematics.cpp
tbai_controllers/tbai_mpc/src/quadruped_arm_wbc/: Factory.cpp  SqpWbc.cpp  WbcBase.cpp
tbai_controllers/tbai_mpc/src/quadruped_mpc/: MpcController.cpp
tbai_controllers/tbai_mpc/src/quadruped_mpc/logic/: DynamicsParametersSynchronizedModule.cpp
tbai_controllers/tbai_mpc/src/quadruped_mpc/quadruped_models/: QuadrupedKinematics.cpp
tbai_controllers/tbai_np3o/include/tbai_np3o/: Np3oController.hpp
tbai_controllers/tbai_np3o/src/: Np3oController.cpp
tbai_controllers/tbai_np3o/tests/: CMakeLists.txt
tbai_controllers/tbai_static/include/tbai_static/: StaticController.hpp
tbai_controllers/tbai_static/src/: StaticController.cpp
tbai_controllers/tbai_wtw/: CMakeLists.txt
tbai_controllers/tbai_wtw/include/tbai_wtw/: WtwController.hpp
tbai_controllers/tbai_wtw/src/: WtwController.cpp
tbai_core/src/: Env.cpp  Logging.cpp  Utils.cpp
tbai_demos/: justfile
tbai_demos/tbai_go2_mujoco/: deploy_go2.py
tbai_deploy_anymal_b/: CMakeLists.txt
tbai_deploy_anymal_b/src/: AnymalBRobotInterface.cpp
tbai_deploy_anymal_c/: CMakeLists.txt
tbai_deploy_anymal_c/include/tbai_deploy_anymal_c/: AnymalCRobotInterface.hpp
tbai_deploy_anymal_d/src/: AnymalDRobotInterface.cpp
tbai_deploy_franka/src/: FrankaRobotInterface.cpp
tbai_deploy_g1/: CMakeLists.txt
tbai_deploy_g1/src/: G1ASAPController.cpp  G1ASAPMimicController.cpp  G1PBHCController.cpp  (+7 more)
tbai_docs/: CMakeLists.txt  Doxyfile.in  requirements.txt
tbai_docs/source/: conf.py.in  example_md.md  example_rst.rst  index.md  index.rst
tbai_estim/: CMakeLists.txt  README.md
tbai_examples/: justfile  requirements.txt
tbai_mujoco/: README.md  config.yaml  deploy_g1.py  deploy_go2.py  deploy_np3o.py  g1_config.yaml  g1_joystick.py  joystick.py
tbai_python/: CMakeLists.txt  pyproject.toml  setup.py
tbai_python/src/: bindings.cpp
tbai_python/src/controllers/: bindings_arm_mpc.cpp  bindings_bob.cpp  bindings_central.cpp  bindings_np3o.cpp  bindings_python_controller.cpp  bindings_quadruped_mpc.cpp  bindings_static.cpp  bindings_wtw.cpp
tbai_python/src/robots/: bindings_anymal_b.cpp  bindings_anymal_c.cpp  bindings_anymal_d.cpp  bindings_franka.cpp  bindings_g1.cpp  bindings_g1_unitree.cpp  bindings_go2.cpp  bindings_go2_unitree.cpp  bindings_spot.cpp
tbai_python/tbai/: __init__.py
tbai_robots/: CMakeLists.txt
tbai_robots/tbai_deploy_anymal_b/: CMakeLists.txt
tbai_robots/tbai_deploy_anymal_b/include/tbai_deploy_anymal_b/: AnymalBRobotInterface.hpp
tbai_robots/tbai_deploy_anymal_b/src/: AnymalBRobotInterface.cpp
tbai_robots/tbai_deploy_anymal_c/: CMakeLists.txt
tbai_robots/tbai_deploy_anymal_c/include/tbai_deploy_anymal_c/: AnymalCRobotInterface.hpp
tbai_robots/tbai_deploy_anymal_c/src/: AnymalCRobotInterface.cpp
tbai_robots/tbai_deploy_anymal_d/: CMakeLists.txt
tbai_robots/tbai_deploy_anymal_d/include/tbai_deploy_anymal_d/: AnymalDRobotInterface.hpp
tbai_robots/tbai_deploy_anymal_d/src/: AnymalDRobotInterface.cpp
tbai_robots/tbai_deploy_franka/: CMakeLists.txt
tbai_robots/tbai_deploy_franka/include/tbai_deploy_franka/: FrankaRobotInterface.hpp
tbai_robots/tbai_deploy_franka/src/: FrankaRobotInterface.cpp
tbai_robots/tbai_deploy_g1/: CMakeLists.txt
tbai_robots/tbai_deploy_g1/include/tbai_deploy_g1/: G1ASAPController.hpp  G1ASAPMimicController.hpp  G1BeyondMimicController.hpp  G1MimicController.hpp  G1PBHCController.hpp  G1RLController.hpp  G1RobotInterface.hpp  G1RobotInterfaceUnitree.hpp  G1SpinkickController.hpp  G1Twist2Controller.hpp  PBHCMotionLoader.hpp
tbai_robots/tbai_deploy_g1/src/: G1ASAPController.cpp  G1ASAPMimicController.cpp  G1BeyondMimicController.cpp  G1MimicController.cpp  G1PBHCController.cpp  G1RLController.cpp  G1RobotInterface.cpp  G1RobotInterfaceUnitree.cpp  G1SpinkickController.cpp  G1Twist2Controller.cpp  Twist2MotionLoader.cpp
tbai_robots/tbai_deploy_go2/: CMakeLists.txt
tbai_robots/tbai_deploy_go2/include/tbai_deploy_go2/: Gamepad.hpp  Go2RobotInterface.hpp  Go2RobotInterfaceUnitree.hpp
tbai_robots/tbai_deploy_go2/src/: Go2RobotInterface.cpp  Go2RobotInterfaceUnitree.cpp  test_lidar.cpp
tbai_robots/tbai_deploy_go2w/: CMakeLists.txt
tbai_robots/tbai_deploy_go2w/include/tbai_deploy_go2w/: Go2WDreamWaQController.hpp  Go2WRobotInterface.hpp
tbai_robots/tbai_deploy_go2w/src/: Go2WDreamWaQController.cpp  Go2WRobotInterface.cpp
tbai_robots/tbai_deploy_spot/: CMakeLists.txt
tbai_robots/tbai_deploy_spot/include/tbai_deploy_spot/: SpotArmRobotInterface.hpp  SpotRobotInterface.hpp
tbai_robots/tbai_deploy_spot/src/: SpotArmRobotInterface.cpp  SpotRobotInterface.cpp
(+61 files in other folders)
