if(TBAI_BUILD_DEPLOY_GO2)
  add_subdirectory(tbai_deploy_go2)
endif()

if(TBAI_BUILD_DEPLOY_GO2W)
  add_subdirectory(tbai_deploy_go2w)
endif()

if(TBAI_BUILD_DEPLOY_G1)
  add_subdirectory(tbai_deploy_g1)
endif()

if(TBAI_BUILD_DEPLOY_FRANKA)
  add_subdirectory(tbai_deploy_franka)
endif()

if(TBAI_BUILD_DEPLOY_SPOT)
  add_subdirectory(tbai_deploy_spot)
endif()

if(TBAI_BUILD_DEPLOY_ANYMAL_B)
  add_subdirectory(tbai_deploy_anymal_b)
endif()

if(TBAI_BUILD_DEPLOY_ANYMAL_C)
  add_subdirectory(tbai_deploy_anymal_c)
endif()

if(TBAI_BUILD_DEPLOY_ANYMAL_D)
  add_subdirectory(tbai_deploy_anymal_d)
endif()
